# TUM-labs

./: .gitignore  CMakeLists.txt
ADT/singly-linked-list/: CMakeLists.txt
ConsoleApp1/: ConsoleApp1.sln
ConsoleApp1/ConsoleApp2/: ConsoleApp2.csproj  Program.cs
MMC1/: 1_algebraic_&_transcendental_equations.rb
MMC2/: 1_gradient_optimization_algorithm.rb  2_conjugate_gradient.rb  4_simplex_lpp_diet_problem.rb  4_simplex_lpp_production.rb
News/: News.sln  Roles.sql  UserRolesMapping.sql  Users.sql  UsersDataScript.sql  testSP.sql
News/Markovify/: dataset_reader.rb  markovify.rb
News/News.Application/: Class1.cs
News/News.BL/: Class1.cs  News.BL.csproj
News/News.DAL/: Class1.cs  News.DAL.csproj
News/News.Domain/: Class1.cs
News/News.Infrastructure/: Class1.cs
News/News.Web/: News.Web.csproj  Program.cs
OOP-CPP/: 0_singly_linked_list.cpp  2_constructorssubjs_matrix_implem.cpp  3_2Dmatrix_class_operator_overloading.cpp  3_operator_overloading.cpp  4_a_inheritance.cpp  4_b_inheritance.cpp  5_a_multiple_inheritance.cpp  5_b_virtual_classes.cpp  5_sem_multiple_inheritance.cpp  6_polymorphism_virtual_functions.cpp  6_sem_inheritance.cpp  7_sem_chess.cpp  999_sem2_constr_this_subj.cpp
PAD/LL1/: LL1.sln
PAM/lab1/: settings.gradle
PAM/lab2/: pubspec.yaml
PAM/lab3/: pubspec.yaml
PAM/lab4/: pubspec.yaml
SOMIPP/: ex1.sh  ex2.sh  ex3.sh  ex6.sh
bst/: CMakeLists.txt  bst.c  bst.h  config.h  main.c
c-labs/: .gitignore
c-labs/lab4/: CMakeLists.txt  anal-sys-f.c  main.c  menus.c  singly-linked-list.c  singly-linked-list.h
singly-linked-list/: main.c
(+429 files in other folders)
